# sns_bridge

./: .gitignore  README.md  app.py  pyproject.toml
sns_bridge/: chalice.py  main.py  sns.py  wsgi.py
