[tool.poetry]
name = "sns_bridge"
version = "0.1.0"
description = "Run an AWS Chalice SNS listener locally"
authors = ["Jake Wood <jake@testbox.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyngrok = "^5.1.0"
bottle = "^0.12.19"
requests = "^2.27.1"
boto3 = "^1.21.8"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
chalice = "^1.26.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sns_bridge = 'sns_bridge.main:main'
